--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"version": "0.0.1",
 	"description": "Backend server for fatou",
 	"main": "server.js",
-	"repository": "https://github.com/musab-olurode/nodejs-starter-template.git",
+	"repository": "https://gitlab.com/fatou-developers/fatou-backend-apis.git",
 	"scripts": {
 		"test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js",
 		"prod": "node -r dotenv/config --es-module-specifier-resolution=node server",
 		"start": "node -r dotenv/config --es-module-specifier-resolution=node server",
 		"dev": "cross-env NODE_ENV=development nodemon -r dotenv/config --es-module-specifier-resolution=node server"
 	},
-	"author": "Mus'ab Olurode",
+	"author": "Fatou INC",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.21.1",
@@ -38,7 +38,7 @@
 	},
 	"devDependencies": {
 		"jest": "^27.0.6",
-		"supertest": "^6.1.3"
+		"supertest": "^6.1.6"
 	},
 	"type": "module",
 	"jest": {
