--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV=production
 PORT=5000
 
-MONGO_URI=mongodb://127.0.0.1:27017/example
+MONGO_URI=mongodb://127.0.0.1:27017/fatou
 
 JWT_SECRET=5gdfb664734gf734yfg734fg743
 JWT_EXPIRE=30d
@@ -10,7 +10,8 @@ JWT_COOKIE_EXPIRE=30
 CLIENT_URL=http://localhost:3000
 LIVE_CLIENT_URL=
 
-FILE_UPLOAD_PATH= ./storage/uploads
+FILE_UPLOAD_PATH=./storage/uploads
+MAX_FILE_UPLOAD=1000000
 
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
