--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js",
 		"prod": "node -r dotenv/config --es-module-specifier-resolution=node server",
-		"start": "node -r dotenv/config --es-module-specifier-resolution=node server",
+		"start": "node --es-module-specifier-resolution=node server",
 		"dev": "cross-env NODE_ENV=development nodemon -r dotenv/config --es-module-specifier-resolution=node server"
 	},
 	"author": "Fatou INC",
@@ -43,5 +43,8 @@
 	"type": "module",
 	"jest": {
 		"testEnvironment": "node"
+	},
+	"engines": {
+		"node": "14.17.5"
 	}
 }
